# everydo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: everydo.cc  everydo.hh  exceptions.h  testexecuter.cc
